# rocket-game

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
assets/: fragment.shader  spaceship.dfield  vertex.shader
src/: asteroid.rs  audio.rs  dfield.frag  dfield.vert  game.c  game.rs  main.rs  physics.rs  player.c  player.h  projectile.rs  render.c  render.h  rocket.rs  sprite.rs  user.rs
