[package]
name = "rocket-game"
version = "0.1.3-alpha.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/rocket-game"
edition = "2018"

readme = "README.md"
description = "A small asteroids like game"

repository = "https://github.com/tversteeg/rocket-game.git"
keywords = ["game", "asteroids"]
categories = ["games"]

[badges]
travis-ci = {repository = "tversteeg/rocket-game"}

[dependencies]
anyhow = "1.0.26"
minifb = "0.15.3"
specs = { version = "0.16.1", features = ["specs-derive"] }
specs-blit = "0.1.5"
sprite-gen = "0.1.8"
rand = "0.7.3"

