[package]
name = "rocket-game"
version = "0.1.6-alpha.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/rocket-game"
edition = "2018"

readme = "README.md"
description = "A small asteroids like game"

repository = "https://github.com/tversteeg/rocket-game.git"
keywords = ["game", "asteroids"]
categories = ["games"]

[badges]
travis-ci = {repository = "tversteeg/rocket-game"}

[dependencies]
anyhow = "1.0.27"
const-tweaker = "0.2.4"
derive_deref = "1.1.0"
minifb = "0.15.3"
rand = "0.7.3"
rotsprite = "0.1.3"
specs = { version = "0.16.1", features = ["specs-derive"] }
specs-blit = "0.3.1"
sprite-gen = "0.1.9"
vek = "0.9.12"
cpal = "0.11.0"
sfxr = "0.1.4"

